--- a/react_graph/package.json
+++ b/react_graph/package.json
@@ -2,6 +2,7 @@
   "name": "react_graph",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,12 +13,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "postinstall": "npm run webpack",
-    "webpack": "webpack",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-client": "react-scripts start",
+    "build": "react-scripts build && (cd server && npm install)",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "cd server && npm start"
   },
   "eslintConfig": {
     "extends": [
